# Sistemas-inteligentes-opencv

./: README.md
Práctica0/: CHANGELOG.TXT  common_code.cpp  common_code.hpp  dudas.txt  show_extremes.cpp
Práctica1/Ejercicio1/: CHANGELOG.TXT  CMakeLists.txt  REPORT.md  cbg_process.cpp  common_code.cpp  common_code.hpp  test_common_code.cpp
Práctica1/Ejercicio2/chroma_key/: CHANGELOG.TXT  CMakeLists.txt  README.md  chroma_key.cpp  common_code.cpp  common_code.hpp  test_common_code.cpp
